# NAI

LAB01/: CMakeLists.txt  main.cpp
LAB02/: CMakeLists.txt  main.cpp
LAB07/: CMakeLists.txt  main.cpp
LAB07py/: main.py
LAB08/: CMakeLists.txt  main.cpp
